# memory-poisoning-persistence

./: .gitignore  BUILDER_HANDOFF.md  CITATION.cff  DECISION_LOG.md  EXPERIMENTAL_DESIGN.md  FINDINGS.md  FINDINGS_AUDIT_REPORT.md  HYPOTHESIS_REGISTRY.md  LICENSE  README.md  content_quality_report.json  governance.yaml  pyproject.toml  reproduce.sh  requirements.txt
blog/: draft.md
memory_poison_scorer/: __init__.py  scorer.py
outputs/: quality_loop_report.json  semantic_review.json
outputs/experiments/: e0_results.json  e1_architecture_comparison.json  e2_p0_threshold.json  e3_parameter_importance.json  e4_cross_domain_transfer.json  e5_consolidation_amplification.json  summary.json
provenance/: config_resolved.yaml  git_info.txt  output_manifest.json  versions.txt
scripts/: make_report_figures.py
src/: __init__.py  experiments.py  memory_architectures.py  persistence_model.py  poisoning.py
tests/: test_memory_architectures.py  test_persistence_model.py  test_scorer.py
